some edits for daskexec, soft deps etc

--- a/setup.cfg
+++ b/setup.cfg
@@ -32,6 +32,9 @@ install_requires =
     requests
     psutil
     dill
+    tqdm
+    dask[distributed]
+    
 python_requires = 
 	>= 3.6
 
@@ -44,6 +47,7 @@ exclude =
 [options.extras_require]
 testing =
     pytest
+     
 
 [test]
 extras = True
